<resources>
    <string name="app_name">Gamein</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="image_games">Image Games</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="top_games">Top Games For You</string>
    <string name="see_all">See All</string>
    <string name="title_games">Title</string>
    <string name="genre_games">Genre</string>
    <string name="rating_games">Rating</string>
    <string name="release_games">Released</string>
    <string name="newest_games">Newest Game</string>
    <string name="header_search">What would you like to play?</string>
    <string name="search_games">Search Games</string>
    <string name="detail">Game Details</string>
    <string name="back">Back</string>
    <string name="description_games">Description</string>
    <string name="genres">Genre</string>
    <string name="profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="star_count">Star Count</string>
    <string name="download_count">Download Count</string>
    <string name="review_count">Review Count</string>
    <string name="category">Category</string>
    <string name="game">Games</string>
    <string name="theme_header">Theme</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="title_favorite">Favorite</string>
    <string name="welcome">Welcome</string>
    <string name="website">Website</string>
</resources>